--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -2,7 +2,8 @@ spring.application.name=SemiProject
 
 # Oracle 연결
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@192.168.40.12:1521:xe
 spring.datasource.username=SEMI
 spring.datasource.password=SEMI
 
@@ -14,3 +15,7 @@ mybatis.type-aliases-package=kh.semiProject.*.model.vo
 
 #세션 만료
 server.servlet.session.timeout=10m
+
+#자동 재시작
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
