--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,13 @@ server.servlet.session.timeout=10m
 #자동 재시작
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
+
+# SMTP 설정 (메일인증을 위한 설정)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=semiproject2025@gmail.com
+spring.mail.password=pvxoldyruryptgkr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
