--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -7,6 +7,11 @@ spring.datasource.url=jdbc:oracle:thin:@192.168.40.12:1521:xe
 spring.datasource.username=SEMI
 spring.datasource.password=SEMI
 
+#redis 정보
+spring.data.redis.port = 6379
+spring.data.redis.host = 192.168.40.8
+spring.data.redis.password = redis
+
 # mybatis 설정
 mybatis.mapper-locations=classpath:mappers/**.xml
 mybatis.configuration.map-underscore-to-camel-case=true
@@ -29,3 +34,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=false
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
