--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 	
 	//redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 	
 }
 
