--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,10 @@ server.servlet.session.timeout=10m
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 
+# 업로드 파일 용량 설정
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
 # SMTP 설정 (메일인증을 위한 설정)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
